--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - "80:80"
         volumes:
-            - ./src:/var/www/html
+            - .:/var/www/html
         links:
             - db:db
     db:
